Fix appearance on mobile

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 
 #pagetitle {
     color: white;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
     font-weight: 900;
     font-size: 30px;
     margin: -5px;
@@ -64,7 +64,7 @@
 
 #music .cover {
     background-color: rgba(0, 0, 0, 0.4);
-    height: 230px;
+    /* height: 230px; */
     border-radius: 8px;
 }
 
@@ -76,12 +76,12 @@
     background-position: top;
     background-repeat: repeat-y;
     border-radius: 8px;
-    height: 230px;
+    /* height: 230px; */
 }
 
 #apps .cover {
     background-color: rgba(0, 0, 0, 0.4);
-    height: 280px;
+    /* height: 280px; */
     border-radius: 8px;
 }
 
@@ -93,12 +93,12 @@
     background-position: top;
     background-repeat: repeat-y;
     border-radius: 8px;
-    height: 280px;
+    /* height: 280px; */
 }
 
 #videos .cover {
     background-color: rgba(255, 255, 255, 0.1);
-    height: 180px;
+    /* height: 180px; */
     border-radius: 8px;
 }
 
@@ -110,12 +110,12 @@
     background-position: top;
     background-repeat: repeat-y;
     border-radius: 8px;
-    height: 180px;
+    /* height: 180px; */
 }
 
 #learning-materials .cover {
     background-color: rgba(0, 0, 0, 0.3);
-    height: 160px;
+    /* height: 160px; */
     border-radius: 8px;
 }
 
@@ -127,7 +127,7 @@
     background-position: 100% 80%;
     background-repeat: repeat-y;
     border-radius: 8px;
-    height: 160px;
+    /* height: 160px; */
 }
 
 #divcontent {
@@ -135,7 +135,7 @@
     margin: 5px;
     padding-right: 12px;
     padding-left: 12px;
-    padding-bottom: 10px;
+    padding-bottom: 28px;
     z-index: 100;
 }
 
